<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart WebView</string>
	<string name="app_desc">A simple use webview integrated w/ native features to help build advanced hybrid applications.</string>
    <string name="image_view">Image View</string>
	<string name="loading">Loading</string>
	<string name="loading2" tools:ignore="TypographyEllipsis">Loading...</string>
	<string name="mgks_promo">github.com/mgks</string>
    <string name="rate_dialog_title">Rate</string>
    <string name="rate_dialog_message">If you like our app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks!</string>
    <string name="rate_dialog_ok">RATE</string>
    <string name="rate_dialog_cancel">LATER</string>
    <string name="rate_dialog_no">DON\'T ASK AGAIN</string>
	<string name="loc_fail">Failed to Find Location</string>
    <string name="loc_fail_text">Please Check Your GPS Location.</string>
    <string name="loc_fail_more">Please check if your GPS is enabled, if not, please set it on high accuracy from location settings.</string>
    <string name="loc_perm">Allow Permission for Location</string>
    <string name="loc_perm_text">Give this app permission to check your location.</string>
    <string name="loc_perm_more">Please allow this app to know your location for better overall experience.</string>
	<string name="dl_downloading" tools:ignore="TypographyEllipsis">Downloading file...</string>
	<string name="dl_downloading2">Downloading File</string>
	<string name="fl_chooser">File Chooser</string>
	<string name="went_wrong">Something Went Wrong!</string>
	<string name="check_connection">Please check your Network Connection!</string>
	<string name="share_w_friends">Share with your Friends</string>
	<string name="notification_channel_name">Important Alerts</string>
	<string name="notification_channel_desc">Get latest and important alerts.</string>
	<string name="search">Search</string>
	<string name="exit">Exit</string>
	<string name="open">Open</string>
	<string name="close">Close</string>
	<string name="search_hint">Enter your query here</string>
	<string name="connecting" tools:ignore="TypographyEllipsis">Connecting...</string>
	<string name="exit_title">Exit confirmation</string>
	<string name="exit_subtitle">Are you sure you want to exit?</string>
	<string name="print_complete">Printing complete</string>
	<string name="print_failed">Printing failed</string>
	<string name="msg_no_internet">No internet connection!</string>
	<string name="print_error">Error printing!</string>
    <string name="loading_app" tools:ignore="TypographyEllipsis">Launching app preview...</string>
    <string name="authenticate">Authenticate</string>
    <string name="documentation">Documentation</string>
	<string name="home">Home</string>
	<string name="plugins">Plugins</string>
	<string name="firebase_messaging">Firebase Messaging</string>
	<string name="gps">GPS</string>
	<string name="url_handling">URL Handling</string>
	<string name="changelog">Changelog</string>
	<string name="need_help">Need Help?</string>
    <string name="play_store_guide">Play Store Guide</string>
	<string name="dark_mode">Dark Mode</string>
</resources>
